--- a/Version Patch Notes/Version 1.1
+++ b/Version Patch Notes/Version 1.1
@@ -1,6 +1,6 @@
 -> Add another action  (WIP)
 -> Add name for continuity
--> Add health for future actions  (WIP)
+-> Add health for future actions
 -> Fixed minor bugs
 -> Add another block to map  (WIP)
 -> Fixed spawning of blocks on the map  (WIP)
