--- a/Version Patch Notes/Version 1.1
+++ b/Version Patch Notes/Version 1.1
@@ -2,5 +2,5 @@
 -> Add name for continuity
 -> Add health for future actions
 -> Fixed minor bugs
--> Add another block to map  (WIP)
--> Fixed spawning of blocks on the map  (WIP)
+-> Add another block to map 
+-> Fixed spawning of blocks on the map
