--- a/Version Patch Notes/Version 1.1
+++ b/Version Patch Notes/Version 1.1
@@ -1,6 +1,18 @@
--> Add another action  (WIP)
+-> Add another action
+      - Added attack functionality to target object "4"
 -> Add name for continuity
+      - Allowed character are 0-9, A-Z, a-z
+      - others will be stored as a *
 -> Add health for future actions
 -> Fixed minor bugs
 -> Add another block to map 
+      - Unbreakable for now, can walk through
 -> Fixed spawning of blocks on the map
+      - Changed rates and fixed issues with spawn containing block
+      
+
+-> Fix endbit functionality for loss continuity prevention  (WIP)
+-> Add object "4" for attack functionality, maybe a class  (WIP)
+-> Decide on what to do with object "5"  (WIP)
+-> Add more to "?" objects  (WIP)
+-> Fix walking through new block and future block  (WIP)
