--- a/Version Patch Notes/Version 1.1
+++ b/Version Patch Notes/Version 1.1
@@ -1,3 +1,4 @@
+Version 1.1 pushed 5/4/2024
 -> Add another action
       - Added attack functionality to target object "4"
 -> Add name for continuity
@@ -9,10 +10,3 @@
       - Unbreakable for now, can walk through
 -> Fixed spawning of blocks on the map
       - Changed rates and fixed issues with spawn containing block
-      
-
--> Fix endbit functionality for loss continuity prevention  (WIP)
--> Add object "4" for attack functionality, maybe a class  (WIP)
--> Decide on what to do with object "5"  (WIP)
--> Add more to "?" objects  (WIP)
--> Fix walking through new block and future block  (WIP)
