--- a/Version Patch Notes/Version 1.2
+++ b/Version Patch Notes/Version 1.2
@@ -1,6 +1,7 @@
-
 -> Fix endbit functionality for loss continuity prevention  (WIP)
 -> Add object "4" for attack functionality, maybe a class  (WIP)
 -> Decide on what to do with object "5"  (WIP)
--> Add more to "?" objects  (WIP)
+-> Add more to "?" objects
+      - Added rolling animation screen with randomized bonuses and debuffs
+      - Possibilities: +/- Score, +/- Health, No Bonus, + Health & + Score
 -> Fix walking through new block and future block  (WIP)
