--- a/Version Patch Notes/Version 1.2
+++ b/Version Patch Notes/Version 1.2
@@ -4,4 +4,4 @@
 -> Add more to "?" objects
       - Added rolling animation screen with randomized bonuses and debuffs
       - Possibilities: +/- Score, +/- Health, No Bonus, + Health & + Score
--> Fix walking through new block and future block  (WIP)
+-> Fixed the ability to walk through "5" block ([=])
