--- a/Version Patch Notes/Version 1.2
+++ b/Version Patch Notes/Version 1.2
@@ -1,5 +1,9 @@
 -> Fix endbit functionality for loss continuity prevention  (WIP)
--> Add object "4" for attack functionality, maybe a class  (WIP)
+-> Add object "4" for attack functionality
+      - This now acts as an enemy with movement AI
+      - It will attack when close or you can attack when it is at an adjacent tile
+      - It will only move to open spaces at random
+      - You gain score and also have implemtned an enemy function
 -> Decide on what to do with object "5"  (WIP)
 -> Add more to "?" objects
       - Added rolling animation screen with randomized bonuses and debuffs
