--- a/Version Patch Notes/Version 1.2
+++ b/Version Patch Notes/Version 1.2
@@ -1,3 +1,4 @@
+Version 1.2 pushed 5/4/2024
 -> Add object "4" for attack functionality
       - This now acts as an enemy with movement AI
       - It will attack when close or you can attack when it is at an adjacent tile
