--- a/Version Patch Notes/Version 1.1
+++ b/Version Patch Notes/Version 1.1
@@ -1,12 +1,12 @@
 Version 1.1 pushed 5/3/2024
--> Add another action
-      - Added attack functionality to target object "4"
--> Add name for continuity
+-> Add another action (attack)
+      - Added attack functionality to target object which will be implemented in future version
+-> Added name for continuity (goes within game file)
       - Allowed character are 0-9, A-Z, a-z
       - others will be stored as a *
 -> Add health for future actions
 -> Fixed minor bugs
 -> Add another block to map 
-      - Unbreakable for now, can walk through
+      - Unbreakable for now, can walk through (fix on later version)
 -> Fixed spawning of blocks on the map
       - Changed rates and fixed issues with spawn containing block
