--- a/Version Patch Notes/Version 1.2
+++ b/Version Patch Notes/Version 1.2
@@ -1,5 +1,5 @@
 Version 1.2 pushed 5/4/2024
--> Add object "4" for attack functionality
+-> Add object "4" for attack functionality (enemy)
       - This now acts as an enemy with movement AI
       - It will attack when close or you can attack when it is at an adjacent tile
       - It will only move to open spaces at random
@@ -8,3 +8,4 @@ Version 1.2 pushed 5/4/2024
       - Added rolling animation screen with randomized bonuses and debuffs
       - Possibilities: +/- Score, +/- Health, No Bonus, + Health & + Score
 -> Fixed the ability to walk through "5" block ([=])
+-> Created a Functions File that allows for generalized printing and enemy objects (class)
