--- a/Version Patch Notes/Version 1.1
+++ b/Version Patch Notes/Version 1.1
@@ -1,4 +1,4 @@
-Version 1.1 pushed 5/3/2024
+Version 1.1 pushed 5/3/2024 - Functionality and UI Update
 -> Add another action (attack)
       - Added attack functionality to target object which will be implemented in future version
 -> Added name for continuity (goes within game file)
