--- a/Version Patch Notes/Version 1.2
+++ b/Version Patch Notes/Version 1.2
@@ -1,4 +1,4 @@
-Version 1.2 pushed 5/4/2024
+Version 1.2 pushed 5/4/2024 - Lucky Block and Enemy Update
 -> Add object "4" for attack functionality (enemy)
       - This now acts as an enemy with movement AI
       - It will attack when close or you can attack when it is at an adjacent tile
