--- a/Version Patch Notes/Version 1.3
+++ b/Version Patch Notes/Version 1.3
@@ -1,4 +1,4 @@
-Version 1.3 not pushed (WIP) - Bug Fix Update
+Version 1.3 not pushed (WIP) - Bug Fix and Documentation Update
 -> Fix enemy movements from jumping off the screen (WIP)
 -> Fix end bit within files to prevent losses being reloaded (WIP)
 -> Add to and update documentation within github and code (WIP)
