--- a/Version Patch Notes/Version 1.3
+++ b/Version Patch Notes/Version 1.3
@@ -1,5 +1,6 @@
 Version 1.3 not pushed (WIP) - Bug Fix and Documentation Update
 -> Fix enemy movements from jumping off the screen (WIP)
--> Fix end bit within files to prevent losses being reloaded (WIP)
+-> Fix end bit within files to prevent losses being reloaded
+-> Fixed enemies so when killed, they stay dead
 -> Add to and update documentation within github and code (WIP)
 -> Brute test and analyze to find bugs (WIP)
