--- a/Version Patch Notes/Version 1.3
+++ b/Version Patch Notes/Version 1.3
@@ -1,6 +1,6 @@
-Version 1.3 not pushed (WIP) - Bug Fix and Documentation Update
+Version 1.3 pushed 5/7/2024 - Bug Fix and Documentation Update
 -> Fix enemy movements from jumping off the screen
 -> Fix end bit within files to prevent losses being reloaded
 -> Fixed enemies so when killed, they stay dead
 -> Add to and update documentation within github and code
--> Added an admin testing console and brute testing perimeter conditions
+-> Added an admin testing console and brute tested perimeter conditions
