Update and rename Version 1.5 to Version 1.4

--- a/Version Patch Notes/Version 1.4
+++ b/Version Patch Notes/Version 1.4
@@ -1,5 +1,6 @@
-Version 1.5 Planning Stage - The Golden Update
+Version 1.4 not pushed - The Golden Update
 -> Add a currency to the game
 -> Add a trader of sorts to the game (more damage, health, score)
 -> Update LuckyBlocks, Blocks, and Enemies accordingly
 -> Add to memory and adjust accordingly
+(Changed from 1.5 to 1.4)
